; if you modify this file, add 'test' to the 'skip' field in drom.toml

(library
 (name lib_expect_tests)
 (preprocess
  (pps ppx_expect))
 (inline_tests
  (modes best)) ; add js for testing with nodejs
 (libraries cargo_graph_lib toml ez_dot ez_toposort ez_debug) ; add your project libraries here
 )
